# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
page_analyzer/: app.py  content_of_page.py  db_actions.py  validator.py
page_analyzer/templates/: base.html  header.html  index.html  page.html  pages.html
